Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 
 html {
-    background: url('images/christmas_decor_background.jpg') no-repeat center center fixed;
+    background: url('images/christmas_decor_background.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 100%
 }
 
 body,
@@ -29,8 +30,6 @@ a{
 
 @media screen and (max-width: 500px) {
     html {
-        background-size: scroll;
-        height: 100%;
-        overflow: hidden;
+       
     }
 }
